changes to avatar cropper ui, fix re re-rendering issue

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -6127,7 +6127,7 @@ aside svg {
   width: 100%;
   height: 100%;
   min-height: 13rem;
-  max-height: 60%;
+  max-height: 70%;
   border-radius: 12px;
   overflow: hidden;
   background: #11181f;
